# caiss

./: .gitignore  CMakeLists.txt  README.md  caiss-linux-env.sh  run_pyCaissDemo.sh  run_pyCaissServer.py  run_pyCaissServer.sh  run_pyCaissTrainDataBuilder.sh  test.txt
.github/workflows/: release.yml
algorithm/hnsw/: hnswlib.h
algorithmCtrl/: AlgorithmDefine.h  AlgorithmInclude.h  AlgorithmProc.cpp  AlgorithmProc.h
algorithmCtrl/hnsw/hnswAlgo/: hnswalg.h  hnswlib.h  space_edition.h  space_ip.h  space_jaccard.h  space_l2.h  visited_list_pool.h
algorithmCtrl/hnsw/hnswProc/: CMakeLists.txt  HnswProc.cpp  HnswProc.h  HnswProcDefine.h  HnswProcDemo.cpp  hnswProc.cpp  hnswProc.h
algorithmCtrl/mrpt/mrptAlgo/: Mrpt.h
algorithmCtrl/mrpt/mrptProc/: MrptProc.cpp  MrptProc.h  MrptProcDefine.h
algorithmCtrl/nsg/nsgAlgo/: index.cpp  index_nsg.cpp
algorithmCtrl/nsg/nsgAlgo/efanna2e/: distance.h
annManageCtrl/: AnnManageDemo.cpp  AnnManageInclude.h  AnnManageProc.h  CMakeLists.txt
annManageCtrl/syncManage/: CMakeLists.txt  SyncManageProc.cpp  SyncManageProc.h  SyncManageProcDemo.cpp
caissDemo/: CMakeLists.txt  CaissDemo.cpp  CaissDemoInclude.h
caissDemo/caissMultiThreadDemo/: CaissMultiThread.h  CaissMutliThread.cpp
caissDemo/caissSimpleDemo/: CaissSimple.cpp  CaissSimple.h
caissDemo/caissSqlDemo/: CaissSql.cpp  CaissSql.h
caissLib/: CMakeLists.txt  CaissLib.cpp  CaissLib.h  CaissLibDefine.h  CaissLibDemo.cpp
chunelAnnLib/: ChunelAnnLib.cpp  ChunelAnnLib.h  ChunelAnnLibDefine.h
commonUtils/: CommonUtilsInclude.h
cpp/: cppCaiss.h  cppCaissDefine.h
csharp/: CsCaiss.cs  CsCaissDefine.cs  CsCaissDemo.cs
doc/: Caiss相似查询库介绍文档.md  caiss-v1.2.0.rar  english-words-71290.txt
doc/mac/: Makefile  libCaiss.dylib  libomp.dylib
java/: JaCaiss.java  JaCaissDefine.java  JaCaissDemo.java  pom.xml
manageCtrl/: CMakeLists.txt  ManageDefine.h  ManageDemo.cpp  ManageInclude.h  ManageProc.cpp  ManageProc.h  manageInclude.h  manageProc.h
manageCtrl/asyncManage/: AsyncManageProc.cpp  AsyncManageProc.h
manageCtrl/syncManage/: CMakeLists.txt  SyncManageProc.cpp  SyncManageProc.h
python/: __init__.py  pyCaiss.py  pyCaissDemo.py  pyCaissServer.py  run_pyCaissServer.sh
python/dataLogs/: summary.py
python/dataProcess/: caiss-pca.plk  caiss-svd.plk  pyCaissBert.py  pyCaissBertServer.py  pyCaissPca.py  pyCaissSvd.py  pyCaissTrainDataBuilder.py
python/logs/: summary.py
sqlCtrl/: CMakeLists.txt  SqlCtrlDemo.cpp  SqlInclude.h  SqlProc.cpp  SqlProc.h  SqlProcDefine.h
sqlCtrl/parser/: bison_parser.h  flex_lexer.cpp  flex_lexer.h
sqlCtrl/util/: SQLParser.cpp  SQLParser.h  SQLParserResult.h
threadCtrl/: ThreadInclude.h
threadCtrl/rwLock/: CMakeLists.txt  RWLock.cpp  RWLock.h  RWLockDemo.cpp
threadCtrl/threadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ThreadPoolDefine.h  ThreadPoolDemo.cpp
utilsCtrl/: CMakeLists.txt  Makefile  UtilsCtrlDemo  UtilsCtrlDemo.cpp  UtilsDefine.h  UtilsInclude.h  UtilsProc.h  cmake_install.cmake
utilsCtrl/editDistanceProc/: EditDistanceProc.h
utilsCtrl/lruProc/: LruProc.h  LruProcDefine.h
utilsCtrl/memoryPool/: MemoryPool.cpp  MemoryPool.h  MemoryPoolDefine.h
utilsCtrl/rapidJsonUtils/rapidJsonProc/: RapidJsonProc.cpp  RapidJsonProc.h
utilsCtrl/singletonProc/: SingletonProc.h
utilsCtrl/timerProc/: AlgoTimerProc.h
utilsCtrl/trieProc/: TrieProc.cpp  TrieProc.h  TrieProcDefine.h
win32patch/: getopt.h  unistd.h
